- 05-18-04: Fixed potential memory leak, and potential crash when Shop created [ChrstphrR]
- 05-16-04: Fixed a list index error on disconnect. [Darkhelmet]
- 05-16-04: Added a few things by Krietor's request, some commented out. [Darkhelmet]
- 05-16-04: Added Comments to monster AI. [Darkhelmet]
- 05-16-04: Made NPC Constants Byte sized now - Mmmm-mmm! [ChrstphrR]
- 05-16-04: Translated SJIS comments for Party Object to legible english. [ChrstphrR]
- 05-16-04: Cleaned up GetGuildETrigger (Asserts, Eliminated unused vars) [ChrstphrR]
- 05-16-04: Cleaned up GetGuildDDegree (Asserts, Eliminated unused vars) [ChrstphrR]
- 05-16-04: MapLoad - lowercase of MapName always used internally. [ChrstphrR]
- 05-16-04: ScriptValidated - memory leak fix when ScriptErr fires up. [ChrstphrR]
- 05-16-04: ScriptValidated - fixed error message filename - now correct. [ChrstphrR]
- 05-16-04: ScriptValidated - fixed error detection in 'script' lines' 4th token. [ChrstphrR]
- 05-14-04: More monster SKills added, improved cast time algorith for monsters. [Darkhelmet]
- 05-12-04: Multiple AI improvements, documentation available if needed. [Darkhelmet]
- 05-11-04: Typo in "ShowDebugErrors" during write to ini file. [ChrstphrR]
- 05-11-04: GetGuildEDegree - Asserts for Preconditons, unused var elimination. [ChrstphrR]
- 05-11-04: GetGuildID - Asserts for Preconditons, index fix. [ChrstphrR]
- 05-11-04: CheckGuildMaster - Asserts for Preconditons, index fix. [ChrstphrR]
- 05-09-04: Corrected interim CVS build title to denote post 1.2.1.1 [ChrstphrR]
- 05-09-04: Bug Fix #852 (prev 5 entries + Ini option ShowDebugErrors) [ChrstphrR]
- 05-09-04: Main unit - MapLoad changed - no more char freezes. [ChrstphrR]
- 05-09-04: ScriptValidated does checking for MapLoad. [ChrstphrR]
- 05-09-04: ScriptValidated parses comment lines in scripts proper. [ChrstphrR]
- 05-09-04: ScriptValidated parses comment lines in scripts proper. [ChrstphrR]